# wireguard-hs

./: .gitignore  .travis.yml  README.md  nara.cabal  stack.yaml
app/: Main.hs
cbits/: tun-linux.c  tun-macos.c  tun.h
src/: Main.hs
src/Network/WireGuard/: Core.hs  Daemon.hs  RPC.hs  TunListener.hs  UdpListener.hs
src/Network/WireGuard/Foreign/: In6Addr.hsc  Key.hs  Tun.hs  UAPI.hsc
src/Network/WireGuard/Internal/: Constant.hs  IPPacket.hs  Noise.hs  Packet.hs  PacketQueue.hs  RpcParsers.hs  State.hs  Types.hs  Util.hs
src/Network/WireGuard/Internal/Data/: Handshake.hs  Peer.hs  QueueSystem.hs  RpcTypes.hs  Types.hs
src/Network/WireGuard/Internal/Stream/: Handshake.hs  Peer.hs
tests/: bench.sh
tests/spec/Network/WireGuard/: HandshakeSpec.hs  RPCSpec.hs
tests/spec/Network/WireGuard/Test/: HandshakeSpec.hs  RPCSpec.hs  Utils.hs
